Wed Sep  2 16:49:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* math.c (math_gamma): get rid of direct comparison between too
	  big double and integer, with gcc on x86_64.  [ruby-core:25257]

Wed Sep  2 13:47:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* math.c (domain_check): simplified.

Wed Sep  2 11:32:24 2009  Koichi Sasada  <ko1@atdot.net>

	* gc.c (obj_free): fix to free method table (fix memory leak).

Wed Sep  2 07:42:15 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/instruction.rb (RubyVM::InstructionsLoader#make_stackcaching_insns):
	  simplified.

Wed Sep  2 02:32:46 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/lib/json/common.rb (NaN): Change definition
	  of NaN to 0.0/0 for 1.8/1.9 compatibility.

Wed Sep  2 01:16:32 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: Update to JSON 1.1.9.

Tue Sep  1 19:56:28 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (eval_string_with_cref): fix to check local_table_size.
	  [ruby-dev:39205] [Bug #2024]

Mon Aug 31 16:20:41 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* class.c (make_singleton_class): variable name changed.
	  removed an unnecessary conditional.

Mon Aug 31 14:17:09 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* class.c: refactored singleton class related matters.
	  Handles eigenclasses and plain classes transparently.

	  (make_metaclass): renamed from make_metametaclass.
	  (METACLASS_OF): new utility macro
	  (META_CLASS_OF_CLASS_CLASS): ditto.
	  (ENSURE_EIGENCLASS): ditto.
	  (make_singleton_class): extracted from rb_singleton_class.
	  (boot_defclass): moved from object.c
	  (Init_class_hierarchy): extracted from Init_Object.
	  (rb_make_metaclass): refactored.
	  (singleton_class_of): extracted from rb_singleton_class.
	  (rb_singleton_class): refactored.
	  (rb_define_singleton_method): it needs a metaclass only
	  but not its metametaclass.
	  
	* object.c: booting class hierarchy was moved to class.c